# politician-trading-tracker

./: .dockerignore  .env.backup.1761952391046  .env.backup.1762295014822  .env.backup.1762307062055  .env.example  .env.politician-trading  .gitignore  .gitleaksignore  .gitmodules  .pre-commit-config.yaml  .ralphrc  10_💳_Subscription.py  11_🔐_Admin.py  1_📥_Data_Collection.py  2_🎯_Trading_Signals.py  3_💼_Trading_Operations.py  4.5_📋_Orders.py  4_📈_Portfolio.py  5_⏰_Scheduled_Jobs.py  6_⚙️_Settings.py  7_🔧_Database_Setup.py  8_📋_Action_Logs.py  9_🛒_Cart.py  ADVANCED_E2E_SUMMARY.md  AGENT_PROMPT.md  AUDIT.md  CLAUDE.md  CLAWDBOT_INSTRUCTIONS.md  Dockerfile  E2E_TEST_SUMMARY.md  ETL_ISSUE_DIAGNOSIS.md  FEATURES.md  FIXME.md  FUNCTIONS_TO_REVIEW.md  LICENSE  LSH_SECRETS_GUIDE.md  MANIFEST.in  METRICS.md  Makefile  PR_DESCRIPTION.md  (+38 more)
.claude/: CLAUDE.md  settings.local.json
.github/workflows/: README.md  ci.yml  clawdbot.yml  keep-alive.yml
.mcli/commands/: README.md  commands.lock.json
.mcli/workflows/: 00_orchestrator.ipynb  01_us_house.ipynb  03_third_party_aggregators.ipynb  06_eu_parliament.ipynb  README.md  admin.py  alpaca.py  backfill.py  client.py  commands.lock.json  congress.py  context.py  etl.py  ingestion.ipynb  jobs.py  lambda.py  ml.py  politician_trading_tracker.json  politician_trading_tracker.py  quiverquant.py  quiverquant.sh  server.py  services.sh  shell.sh  supabase.py  trading_research.py  workflows.lock.json
.ralph/: .circuit_breaker_state  .claude_session_id  .ralph_session  .ralph_session_history  .response_analysis  AGENT.md  PROMPT.md  fix_plan.md  progress.json  status.json
.streamlit/: config.toml  secrets.toml.example  secrets.toml.oauth  secrets.toml.template
client/: .dockerignore  .env.production  .env.production.example  Dockerfile  Makefile  TODO.md  fly.toml  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  vite.config.ts  vitest.config.ts
client/docs/: python-integration.md
client/e2e/: API_INTEGRATION_TEST_PLAN.md  admin-role-integration.spec.ts  admin.spec.ts  alpaca-integration.spec.ts  alpaca-trading.spec.ts  auth.spec.ts  dashboard-data-integration.spec.ts  dashboard.spec.ts  data-quality.spec.ts  detail-modals-integration.spec.ts  drops-integration.spec.ts  error-boundary.spec.ts  filings-view.spec.ts  index.spec.ts  not-found.spec.ts  orders-integration.spec.ts  orders.spec.ts  parties-integration.spec.ts  politician-profile-modal.spec.ts  politicians-view.spec.ts  portfolio.spec.ts  protected-routes.spec.ts  reference-portfolio-integration.spec.ts  scheduled-jobs.spec.ts  settings.spec.ts  showcase-network-integration.spec.ts  showcase.spec.ts  signal-playground.spec.ts  strategy-follow-integration.spec.ts  subscription.spec.ts  trades-view.spec.ts  trading-operations.spec.ts  trading-signals-integration.spec.ts  trading-signals.spec.ts  user-settings-integration.spec.ts  wallet-auth-integration.spec.ts
client/playwright-report/: index.html
client/python/: README.md  requirements.txt  streamlit_sync_page.py  supabase_sync.py
docs/: ACTION_LOGGING_GUIDE.md  ACTION_LOGGING_QUICKSTART.md  ALERTING_CONFIGURATION.md  ARCHITECTURE_DIAGRAM.txt  AUDIT.md  AUTHENTICATION.md  AUTHENTICATION_ENHANCEMENT.md  AUTOREFRESH_INTEGRATION.md  CI_CD_INTEGRATION.md  CODEBASE_ARCHITECTURE.md  DATABASE_CLEANUP_2025-11-03.md  DATA_SOURCE_STATUS.md  DEPLOYMENT.md  FUNCTION_REVIEW_TODO.md  GOOGLE_OAUTH_SETUP.md  INFRASTRUCTURE_IMPROVEMENTS.md  LIBRARIES_EVALUATION.md  LIVE_TRADING_IMPLEMENTATION.md  MISSING_COMPONENTS.md  MISSING_TICKERS.md  OAUTH_SETUP.md  PAYWALL_INTEGRATION.md  PDF_PARSING.md  PDF_REPROCESSING_STATUS.md  PIPELINE_ARCHITECTURE.md  PIPELINE_MIGRATION_GUIDE.md  SCRAPER_IMPLEMENTATION_GUIDE.md  SCRAPER_IMPROVEMENTS.md  SENATE_ETL_IMPLEMENTATION_GUIDE.md  STATE_SCRAPER_ROADMAP.md  STORAGE_ARCHITECTURE.md  STORAGE_STATUS_REPORT.md  TEST_PLAN.md  TO_IMPLEMENT.md  TRADING_GUIDE.md  TRAINING.md  UI_IMPROVEMENTS_2025-11-03.md  USER_API_KEYS_IMPLEMENTATION.md  in-app-scheduling.md  logging-quick-reference.md  (+6 more)
migrations/: 001_enhanced_disclosure_fields.sql  README.md  create_action_logs_table.sql
pages/: 1_📥_Data_Collection.py  2_🎯_Trading_Signals.py  3_💼_Trading_Operations.py  4_📈_Portfolio.py  5_⏰_Scheduled_Jobs.py  5_⚙️_Settings.py  6_🔧_Database_Setup.py  8_📋_Action_Logs.py
python-etl-service/: Dockerfile  FUNCTIONS.md  fly.toml  requirements.txt
python-micro-service/: models.py  verify_debug_setup.py
scripts/: 02_us_senate.ipynb  05_uk_parliament.ipynb  07_eu_member_states.ipynb  README.md  analyze_repo.py  analyze_volume.py  apply_storage_migration.py  assign_admin_role.sql  backfill_tickers.py  backfill_with_quiverquant.py  check_packages.py  check_production_schema.py  check_ticker_data.py  check_trading_orders_schema.py  cleanup_corrupt_quiverquant_data.py  cleanup_malformed_politicians.py  copy_secrets_for_streamlit.sh  copy_secrets_to_clipboard.sh  create_admin_user.sql  create_storage_buckets.py  debug_cleaning.py  debug_disclosure_query.py  demo.py  deploy_docker.sh  deploy_manual.sh  deploy_netlify.sh  deploy_vercel.sh  find_hardcoded_values.py  fix_react_env.sh  generate_password_hash.py  generate_signals.py  ingest.ipynb  init_default_jobs.py  inspect_quiverquant_response.py  lint_hardcoded_strings.py  load_jobs_from_database.py  mark_pdf_records.py  migrate_admin_users.py  monitor_backend.sh  push_secrets_to_streamlit.py  (+23 more)
server/: .env.example  Dockerfile  README.md  SERVER.md  auth_utils_enhanced.py  fly.toml  mix.exs
src/: 10_💳_Subscription.py  11_🔐_Admin.py  1_📥_Data_Collection.py  2_🎯_Trading_Signals.py  3_💼_Trading_Operations.py  4.5_📋_Orders.py  4_📈_Portfolio.py  5_⏰_Scheduled_Jobs.py  6_⚙️_Settings.py  7_🔧_Database_Setup.py  8_📋_Action_Logs.py  99_🧪_Auth_Test.py  auth_utils.py  auth_utils_enhanced.py  autorefresh_config.py  command_palette.py  models.py  paywall_config.py  shopping_cart.py  sidebar_config.py  streamlit_hotkeys_integration.py  streamlit_utils.py  user_api_keys.py  verify_debug_setup.py
supabase/: README.md
tests/: README.md
(+811 files in other folders)
